force-app/main/default/objects/Other_Charges__c/Other_Charges__c.object-meta.xml
<CustomObject>
    <label>Other Charges</label>
    <nameField>
        <displayFormat>{YYYY}{MM}-{000000}</displayFormat>
        <label>Other Charges Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Other Charges</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>